--- a/iotdb-cli/pom.xml
+++ b/iotdb-cli/pom.xml
@@ -45,7 +45,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.iotdb</groupId>
-            <artifactId>IoTDB-cluster</artifactId>
+            <artifactId>iotdb-monitor</artifactId>
             <version>0.8.0-SNAPSHOT</version>
         </dependency>
         <dependency>
