--- a/cluster/pom.xml
+++ b/cluster/pom.xml
@@ -48,6 +48,12 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.iotdb</groupId>
+            <artifactId>iotdb-monitor</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
         <!-- jraft -->
         <dependency>
             <groupId>com.alipay.sofa</groupId>
@@ -75,12 +81,6 @@
                     <artifactId>log4j-jcl</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.iotdb</groupId>
-            <artifactId>iotdb-monitor</artifactId>
-            <version>0.8.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
     <build>
