--- a/cluster/pom.xml
+++ b/cluster/pom.xml
@@ -26,7 +26,7 @@
         <version>0.8.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>IoTDB-cluster</artifactId>
+    <artifactId>iotdb-cluster</artifactId>
     <name>IoTDB Cluster</name>
     <properties>
         <jraft.version>1.2.4</jraft.version>
