--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,11 @@ matrix:
     - os: osx
       osx_image: xcode10.1 # with JDK11.0.1+13 installed
       name: osx-oraclejdk11
+      script:
+        - java -version
+        - mvn -version
+        - mvn -B apache-rat:check
+        - mvn clean package -pl iotdb,grafana,iotdb-cli,example,:kafka-example,:rocketmq-example -am integration-test
     - os: osx
       osx_image: xcode9.3  # with JDK1.8.0_112-b16 installed
       name: osx-oraclejdk8
@@ -44,6 +49,11 @@ matrix:
             - AdoptOpenJDK/openjdk
           update: true
           casks: adoptopenjdk-openjdk11
+      script:
+        - java -version
+        - mvn -version
+        - mvn -B apache-rat:check
+        - mvn clean package -pl iotdb,grafana,iotdb-cli,example,:kafka-example,:rocketmq-example -am integration-test
     - os: osx
       osx_image: xcode9.3  # with JDK1.8.0_112-b16 installed
       name: osx-openjdk8
@@ -54,7 +64,6 @@ matrix:
            - AdoptOpenJDK/openjdk
           update: true
           casks: adoptopenjdk-openjdk8
-
     - os: windows
       language: c
       name: win-oraclejdk11
@@ -68,11 +77,6 @@ matrix:
         - export "MAVEN_HOME=/c/mvn361/apache-maven-3.6.1"
         - export "M2_HOME=/c/mvn361/apache-maven-3.6.1"
         - export "PATH=$MAVEN_HOME/bin:$PATH"
-      script:
-        - java -version
-        - mvn -version
-        - mvn -B clean integration-test
-
     - os: linux
       name: linux-openjdk11
       dist: trusty
@@ -85,6 +89,8 @@ matrix:
         - export PATH=$JAVA_HOME/bin:$PATH
       script:
         - java -version
+        - mvn -version
+        - mvn -B apache-rat:check
         - mvn clean package -pl iotdb,grafana,iotdb-cli,example,:kafka-example,:rocketmq-example -am integration-test
     - os: linux
       name: linux-openjdk8
@@ -98,6 +104,11 @@ matrix:
       name: linux-oraclejdk11
       dist: trusty
       jdk: oraclejdk11
+      script:
+        - java -version
+        - mvn -version
+        - mvn -B apache-rat:check
+        - mvn clean package -pl iotdb,grafana,iotdb-cli,example,:kafka-example,:rocketmq-example -am integration-test
 
 cache:
   directories:
@@ -114,6 +125,7 @@ install: true
 
 script:
   - java -version
+  - mvn -version
   - mvn -B apache-rat:check
   - mvn -B clean integration-test
 
