--- a/.travis.yml
+++ b/.travis.yml
@@ -70,6 +70,13 @@ matrix:
         - java -version
         - mvn -version
         - mvn -B clean integration-test
+      cache:
+        directories:
+          - '$HOME/.m2/repository'
+          - '$HOME/.sonar/cache'
+          - '/c/java11'
+          - '/c/mvn361'
+          
     - os: windows
       language: c
       name: win-oraclejdk8
@@ -88,6 +95,7 @@ matrix:
         - java -version
         - mvn -version
         - mvn -B clean integration-test
+
     - os: linux
       name: linux-openjdk11
       dist: trusty
