add Lag for write

--- a/iotdb/iotdb/conf/iotdb-sync-client.properties
+++ b/iotdb/iotdb/conf/iotdb-sync-client.properties
@@ -26,10 +26,10 @@ server_port=5555
 # The cycle time of post data back to receiver, the unit of time is second
 upload_cycle_in_seconds=600
 
-# Set bufferWrite data absolute path of IoTDB
+# Set bufferWrite data absolute metric of IoTDB
 # It needs to be set with iotdb_schema_directory, they have to belong to the same IoTDB
 # iotdb_bufferWrite_directory = D:\\iotdb\\data\\data\\settled
 
-# Set schema file absolute path of IoTDB
+# Set schema file absolute metric of IoTDB
 # It needs to be set with iotdb_bufferWrite_directory, they have to belong to the same IoTDB
 # iotdb_schema_directory = D:\\iotdb\\data\\system\\schema\\mlog.txt
