--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -40,29 +40,29 @@ force_wal_period_in_ms=10
 
 # database features configuration
 # data dir
-# If this property is unset, system will save the data in the default relative path directory under the IoTDB folder(i.e., %IOTDB_HOME%/data/data).
+# If this property is unset, system will save the data in the default relative metric directory under the IoTDB folder(i.e., %IOTDB_HOME%/data/data).
 # If it is absolute, system will save the data in exact location it points to.
-# If it is relative, system will save the data in the relative path directory it indicates under the IoTDB folder.
-# Note: If data_dir is assigned an empty string(i.e.,zero-length), it will be handled as a relative path.
+# If it is relative, system will save the data in the relative metric directory it indicates under the IoTDB folder.
+# Note: If data_dir is assigned an empty string(i.e.,zero-length), it will be handled as a relative metric.
 # For windows platform
-# If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the path is absolute. Otherwise, it is relative.
+# If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the metric is absolute. Otherwise, it is relative.
 # data_dir=D:\\iotdb\\data\\data
 # For Linux platform
-# If its prefix is "/", then the path is absolute. Otherwise, it is relative.
-# data_dir=/path/iotdb/data/data
+# If its prefix is "/", then the metric is absolute. Otherwise, it is relative.
+# data_dir=/metric/iotdb/data/data
 
 # tsfile dir
 # For this property, multiple directories should be set, and all directories should be separated by ",". All TsFiles will be allocated separately in all these directories. Moreover, setting absolute directories is suggested.
-# If this property is unset, system will save the TsFiles in the default relative path directory under the data_dir folder(i.e., %IOTDB_HOME%/data/data/settled).
+# If this property is unset, system will save the TsFiles in the default relative metric directory under the data_dir folder(i.e., %IOTDB_HOME%/data/data/settled).
 # If some are absolute, system will save the data in exact location they point to.
-# If some are relative, system will save the data in the relative path directory they indicate under the data_dir folder.
-# Note: If some are assigned an empty string(i.e.,zero-length), they will be handled as a relative path.
+# If some are relative, system will save the data in the relative metric directory they indicate under the data_dir folder.
+# Note: If some are assigned an empty string(i.e.,zero-length), they will be handled as a relative metric.
 # For windows platform
-# If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the path is absolute. Otherwise, it is relative.
+# If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the metric is absolute. Otherwise, it is relative.
 # tsfile_dir=D:\\iotdb\\data\\data,data\\data
 # For Linux platform
-# If its prefix is "/", then the path is absolute. Otherwise, it is relative.
-# tsfile_dir=/path/iotdb/data/data,data/data
+# If its prefix is "/", then the metric is absolute. Otherwise, it is relative.
+# tsfile_dir=/metric/iotdb/data/data,data/data
 
 # mult_dir_strategy
 # The strategy is used to choose a directory from tsfile_dir for the system to store a new tsfile.
@@ -77,28 +77,28 @@ force_wal_period_in_ms=10
 # mult_dir_strategy=MaxDiskUsableSpaceFirstStrategy
 
 # system dir
-# If this property is unset, system will save the data in the default relative path directory under the IoTDB folder(i.e., %IOTDB_HOME%/data/system).
+# If this property is unset, system will save the data in the default relative metric directory under the IoTDB folder(i.e., %IOTDB_HOME%/data/system).
 # If it is absolute, system will save the data in exact location it points to.
-# If it is relative, system will save the data in the relative path directory it indicates under the IoTDB folder.
-# Note: If sys_dir is assigned an empty string(i.e.,zero-length), it will be handled as a relative path.
+# If it is relative, system will save the data in the relative metric directory it indicates under the IoTDB folder.
+# Note: If sys_dir is assigned an empty string(i.e.,zero-length), it will be handled as a relative metric.
 # For windows platform
-# If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the path is absolute. Otherwise, it is relative.
+# If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the metric is absolute. Otherwise, it is relative.
 # sys_dir=D:\\iotdb\\data\\system
 # For Linux platform
-# If its prefix is "/", then the path is absolute. Otherwise, it is relative.
-# sys_dir=/path/iotdb/data/system
+# If its prefix is "/", then the metric is absolute. Otherwise, it is relative.
+# sys_dir=/metric/iotdb/data/system
 
 # wal dir
-# If this property is unset, system will save the data in the default relative path directory under the IoTDB folder(i.e., %IOTDB_HOME%/data).
+# If this property is unset, system will save the data in the default relative metric directory under the IoTDB folder(i.e., %IOTDB_HOME%/data).
 # If it is absolute, system will save the data in the exact location it points to.
-# If it is relative, system will save the data in the relative path directory it indicates under the IoTDB folder.
-# Note: If wal_dir is assigned an empty string(i.e.,zero-length), it will be handled as a relative path.
+# If it is relative, system will save the data in the relative metric directory it indicates under the IoTDB folder.
+# Note: If wal_dir is assigned an empty string(i.e.,zero-length), it will be handled as a relative metric.
 # For windows platform
-# If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the path is absolute. Otherwise, it is relative.
+# If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the metric is absolute. Otherwise, it is relative.
 # wal_dir=D:\\iotdb\\data
 # For Linux platform
-# If its prefix is "/", then the path is absolute. Otherwise, it is relative.
-# wal_dir=/path/iotdb/data
+# If its prefix is "/", then the metric is absolute. Otherwise, it is relative.
+# wal_dir=/metric/iotdb/data
 
 # The maximum concurrent thread number for merging overflow
 # Increase this value, it will increase IO and CPU consumption
@@ -194,7 +194,7 @@ small_flush_interval=60000
 external_sort_threshold=50
 
 # cache size for MManager.
-# This cache is used to improve write speed where all path check and TSDataType will be cached in MManager with corresponding Path.
+# This cache is used to improve write speed where all metric check and TSDataType will be cached in MManager with corresponding Path.
 schema_manager_cache_size=300000
 
 # If the size in byte of a WAL log exceeds this, it won't be written.
