--- a/.travis.yml
+++ b/.travis.yml
@@ -114,7 +114,7 @@ matrix:
         - wget http://hg.openjdk.java.net/jdk-updates/jdk11u/archive/jdk-11.0.2+9.tar.bz2 -O jdk11.tar.bz2
         - tar -xjf jdk11.tar.bz2
       before_script:
-        - export JAVA_HOME=$PWD/jdk-11.0.2/
+        - export JAVA_HOME=$PWD/jdk11u-jdk-11.0.2+9/
         - export PATH=$JAVA_HOME/bin:$PATH
       script:
         - java -version
