--- a/.travis.yml
+++ b/.travis.yml
@@ -111,10 +111,10 @@ matrix:
       dist: trusty
       sudo: required
       before_install:
-        - wget http://hg.openjdk.java.net/jdk-updates/jdk11u/archive/jdk-11.0.2+9.tar.bz2 -O jdk11.tar.bz2
-        - tar -xjf jdk11.tar.bz2
+        - wget https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_linux-x64_bin.tar.gz -O jdk11.tar.gz
+        - tar -xjf jdk11.tar.gz
       before_script:
-        - export JAVA_HOME=$PWD/jdk11u-jdk-11.0.2+9/
+        - export JAVA_HOME=$PWD/jdk-11.0.2/
         - export PATH=$JAVA_HOME/bin:$PATH
       script:
         - java -version
