--- a/.travis.yml
+++ b/.travis.yml
@@ -73,19 +73,19 @@ matrix:
         - mvn -version
         - mvn -B clean integration-test
 
-#    - os: linux
-#      name: linux-openjdk11
-#      dist: trusty
-#      sudo: required
-#      before_install:
-#        - wget https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_linux-x64_bin.tar.gz -O jdk11.tar.gz
-#        - tar -xzf jdk11.tar.gz
-#      before_script:
-#        - export JAVA_HOME=$PWD/jdk-11.0.2/
-#        - export PATH=$JAVA_HOME/bin:$PATH
-#      script:
-#        - java -version
-#        - mvn -B clean integration-test
+    - os: linux
+      name: linux-openjdk11
+      dist: trusty
+      sudo: required
+      before_install:
+        - wget https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_linux-x64_bin.tar.gz -O jdk11.tar.gz
+        - tar -xzf jdk11.tar.gz
+      before_script:
+        - export JAVA_HOME=$PWD/jdk-11.0.2/
+        - export PATH=$JAVA_HOME/bin:$PATH
+      script:
+        - java -version
+        - mvn -B clean integration-test
     - os: linux
       name: linux-openjdk8
       dist: trusty
