fix some issues according to pr comments

--- a/iotdb/iotdb/conf/iotdb-cluster.properties
+++ b/iotdb/iotdb/conf/iotdb-cluster.properties
@@ -81,3 +81,12 @@ read_data_consistency_level = 1
 # So this value is the sum of all sub-tasks.
 # When this value <= 0, use CPU core number * 10
 concurrent_qp_sub_task_thread = 0
+
+# Batch data size read from remote query node once while reading, default value is 10000.
+# The smaller the parameter, the more communication times and the more time-consuming it is.
+batch_read_size = 10000;
+
+# Maximum number of cached batch data list for each series in coordinator node while reading,
+# default value is 2. The coordinator node is responsible for receiving client requests and
+# requesting data from query nodes and collecting them.
+max_cached_batch_data_list_size = 2;
