--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.assembly.version>2.5.5</maven.assembly.version>
-        <scala.version>2.0.1</scala.version>
+        <scala.version>2.11.8</scala.version>
         <hadoop.version>2.7.3</hadoop.version>
         <junit.version>4.12</junit.version>
         <slf4j.version>1.7.12</slf4j.version>
@@ -135,8 +135,8 @@
         <module>service-rpc</module>
         <module>iotdb-cli</module>
         <module>example</module>
-        <!--<module>hadoop</module>-->
-        <!--<module>spark</module>-->
+        <!-- <module>hadoop</module> -->
+        <module>spark</module>
     </modules>
     <build>
         <pluginManagement>
