--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -56,12 +56,12 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.11.8</version>
+            <version>${scala.version}</version>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.11</artifactId>
-            <version>3.0.0</version>
+            <version>3.0.5</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -89,9 +89,6 @@
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <scalaVersion>2.11.8</scalaVersion>
-                </configuration>
             </plugin>
         </plugins>
     </build>
