--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -17,15 +17,22 @@
 # under the License.
 #
 
+####################
+### RPC Configuration
+####################
+
 rpc_address=0.0.0.0
 
 rpc_port=6667
 
-# Write ahead log configuration
+####################
+### Write Ahead Log Configuration
+####################
+
 # Is write ahead log enable
 enable_wal=true
 
-# When a certain amount ofwrite ahead log is reached, it will be flushed to disk
+# When a certain amount of write ahead log is reached, it will be flushed to disk
 # It is possible to lose at most flush_wal_threshold operations
 flush_wal_threshold=10000
 
@@ -38,7 +45,10 @@ flush_wal_period_in_ms=10
 # Set this parameter to 0 may slow down the ingestion on slow disk.
 force_wal_period_in_ms=10
 
-# database features configuration
+####################
+### Directory Configuration
+####################
+
 # data dir
 # If this property is unset, system will save the data in the default relative path directory under the IoTDB folder(i.e., %IOTDB_HOME%/data/data).
 # If it is absolute, system will save the data in exact location it points to.
@@ -100,6 +110,10 @@ force_wal_period_in_ms=10
 # If its prefix is "/", then the path is absolute. Otherwise, it is relative.
 # wal_dir=/path/iotdb/data
 
+####################
+### Memory Control Configuration
+####################
+
 # The maximum concurrent thread number for merging overflow
 # Increase this value, it will increase IO and CPU consumption
 # Decrease this value, when there is much overflow data, it will increase disk usage, which will reduce read speed
@@ -116,7 +130,7 @@ max_opened_folder=100
 # The amount of data that is read every time when IoTDB merge data.
 fetch_size=10000
 
-# The period time of flushing data from memory to file. 
+# The period time of flushing data from memory to file.
 # The unit is second.
 period_time_for_flush_in_second=3600
 
@@ -164,7 +178,10 @@ overflow_file_size_threshold=209715200
 # How many thread can concurrently flush. When <= 0, use CPU core number.
 concurrent_flush_thread=0
 
-# Statistics Monitor configuration
+####################
+### Statistics Monitor configuration
+####################
+
 # Set enable_stat_monitor true(or false) to enable(or disable) the StatMonitor that stores statistics info periodically.
 # back_loop_period_sec decides the period when StatMonitor writes statistics info into IoTDB.
 # stat_monitor_detect_freq_sec decides when IoTDB detects statistics info out-of-date.
@@ -202,11 +219,14 @@ schema_manager_cache_size=300000
 # Generally the default value 4MB is enough.
 max_log_entry_size=4194304
 
-# IoTDB sync server properties
-# Whether to allow to post back, the default allowed
+####################
+### Sync Server Configuration
+####################
+
+# Whether to open the sync_server_port for receiving data from sync client, the default allowed
 is_sync_enable=true
 
-# Sync server port address
+# Sync server port to listen
 sync_server_port=5555
 
 # White IP list of Sync client.
@@ -215,7 +235,9 @@ sync_server_port=5555
 # The default is to allow all IP to sync
 IP_white_list=0.0.0.0/0
 
-# Choose a sync strategy of loading historical data:
-#1. It's more likely to update historical data, please choose "true".
-#2. It's more likely not to update historical data or you don't know exactly, please choose "false". 
+# The processing strategy chosen by the sync server when merging the sync data.
+# 1. If the sync data accounts for more than 50% of the update of the historical data (compared with the latest timestamp of the local storage group data),then it is recommended to select strategy 1.
+#    Setting the parameter to true, which has a greater impact on the write performance of the IoTDB system and occupies less CPU of the machine.
+# 2. If the sync data accounts for less than 50% of the update of the historical data (compared with the latest timestamp of the local storage group data),then it is recommended to select strategy 2.
+#    Setting the parameter to false, which has little impact on the write performance of IoTDB system and takes up a large amount of CPU power.
 update_historical_data_possibility=false
