--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -138,9 +138,9 @@ period_time_for_flush_in_second=3600
 # The unit is second.
 period_time_for_merge_in_second=7200
 
-#When set to true, start timing flush and merge service. False, stop timing flush and merge service.
-#Default is true.
-enable_timing_close_and_Merge=true
+# When set to true, start timing flush and merge service. False, stop timing flush and merge service.
+# Default is true.
+enable_timing_close_and_merge=true
 
 # time zone of server side
 # default value is +08:00
@@ -154,8 +154,8 @@ mem_threshold_warning=0.5
 mem_threshold_dangerous=0.6
 
 # every such interval, a thread will check if memory exceeds mem_threshold_warning
-# if do exceed, auto flush will be triggered, in ms, 1s by default
-mem_monitor_interval=1000
+# if do exceed, auto flush will be triggered, the time unit is ms, 1s by default
+mem_monitor_interval_in_ms=1000
 
 # Decide how to control memory used by inserting data.
 # 0 is RecordMemController, which count the size of every record (tuple).
@@ -190,14 +190,16 @@ concurrent_flush_thread=0
 # The monitor, which writes statistics info to IoTDB periodically, is disabled by default.
 enable_stat_monitor=false
 
-# The period that StatMonitor stores statistics info
-back_loop_period_sec=5
+# The period that StatMonitor stores statistics info, the time unit is seconds.
+back_loop_period_in_second=5
 
-# The interval at which StatMonitor starts to check whether statistics info can be deleted due to exceeding the retention volume
-stat_monitor_detect_freq_sec=600
+# The interval at which StatMonitor starts to check whether statistics info can be deleted due to exceeding the retention volume.
+# The time unit is seconds.
+stat_monitor_detect_freq_in_second=600
 
-# The minimum age of statistics storage information to be eligible for deletion due to age
-stat_monitor_retain_interval_sec=600
+# The minimum age of statistics storage information to be eligible for deletion due to age.
+# The time unit is seconds.
+stat_monitor_retain_interval_in_second=600
 
 # When set false, MemMonitorThread and MemStatisticThread will not be created.
 enable_mem_monitor=true
