--- a/iotdb/iotdb/conf/iotdb-sync-client.properties
+++ b/iotdb/iotdb/conf/iotdb-sync-client.properties
@@ -23,8 +23,8 @@ server_ip=127.0.0.1
 # Sync client port
 server_port=5555
 
-# The period time of sync process, the unit of time is second
-sync_period_in_seconds=600
+# The period time of sync process, the time unit is second.
+sync_period_in_second=600
 
 # Set bufferWrite data absolute path of IoTDB
 # It needs to be set with iotdb_schema_directory, they have to belong to the same IoTDB
