change sync record to async record

--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -219,3 +219,9 @@ IP_white_list=0.0.0.0/0
 #1. It's more likely to update historical data, please choose "true".
 #2. It's more likely not to update historical data or you don't know exactly, please choose "false". 
 update_historical_data_possibility=false
+
+# performance statistic configuration
+# Is stat time cost of sub-module in write process enable
+enable_write_performance_stat=true
+# The interval of small flush in ms.
+performance_stat_display_interval=60000
