jmx dynamic control parameter and function

--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -222,6 +222,8 @@ update_historical_data_possibility=false
 
 # performance statistic configuration
 # Is stat time cost of sub-module in write process enable
-enable_write_performance_stat=true
+enable_performance_stat=false
 # The interval of small flush in ms.
 performance_stat_display_interval=60000
+# The memory used for performance_stat.
+performance_stat_memory_in_kb=20
