change time from nanotime to ms, remove some operation

--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -221,9 +221,9 @@ IP_white_list=0.0.0.0/0
 update_historical_data_possibility=false
 
 # performance statistic configuration
-# Is stat time cost of sub-module in write process enable
+# Is stat performance of sub-module enable
 enable_performance_stat=false
-# The interval of small flush in ms.
+# The interval of display statistic result in ms.
 performance_stat_display_interval=60000
-# The memory used for performance_stat.
+# The memory used for performance_stat in kb.
 performance_stat_memory_in_kb=20
