--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -116,7 +116,7 @@ force_wal_period_in_ms=10
 
 # The maximum concurrent thread number for merging overflow
 # Increase this value, it will increase IO and CPU consumption
-# Decrease this value, when there is much overflow data, it will increase disk usage, which will reduce read speed
+# Decrease this value, when there is much overflow data, it will increase disk usage, which will reduce cloneList speed
 # When the value<=0 or > CPU core number, use the CPU core number.
 merge_concurrent_threads=0
 
@@ -127,7 +127,7 @@ merge_concurrent_threads=0
 # For an application, the total amount of folder is equal to the number of storage_group settings in SQL
 max_opened_folder=100
 
-# The amount of data that is read every time when IoTDB merge data.
+# The amount of data that is cloneList every time when IoTDB merge data.
 fetch_size=10000
 
 # The period time of flushing data from memory to file.
