--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -29,19 +29,19 @@ rpc_port=6667
 ### Write Ahead Log Configuration
 ####################
 
-# Is write ahead log enable
+# Is insert ahead log enable
 enable_wal=true
 
-# When a certain amount of write ahead log is reached, it will be flushed to disk
+# When a certain amount of insert ahead log is reached, it will be flushed to disk
 # It is possible to lose at most flush_wal_threshold operations
 flush_wal_threshold=10000
 
-# The cycle when write ahead log is periodically refreshed to disk(in milliseconds)
+# The cycle when insert ahead log is periodically refreshed to disk(in milliseconds)
 # It is possible to lose at most flush_wal_period_in_ms ms operations
 flush_wal_period_in_ms=10
 
-# The cycle when write ahead log is periodically forced to be written to disk(in milliseconds)
-# If force_wal_period_in_ms = 0 it means force write ahead log to be written to disk after each refreshment
+# The cycle when insert ahead log is periodically forced to be written to disk(in milliseconds)
+# If force_wal_period_in_ms = 0 it means force insert ahead log to be written to disk after each refreshment
 # Set this parameter to 0 may slow down the ingestion on slow disk.
 force_wal_period_in_ms=10
 
@@ -147,10 +147,10 @@ enable_timing_close_and_merge=true
 # eg. +08:00, -01:00
 time_zone=+08:00
 
-# if memory used by write reaches this threshold, auto flush will be triggered, percentile of Java heap memory
+# if memory used by insert reaches this threshold, auto flush will be triggered, percentile of Java heap memory
 mem_threshold_warning=0.5
 
-# if memory used by write reaches this threshold, write will be blocked, percentile of Java heap memory
+# if memory used by insert reaches this threshold, insert will be blocked, percentile of Java heap memory
 mem_threshold_dangerous=0.6
 
 # every such interval, a thread will check if memory exceeds mem_threshold_warning
@@ -214,7 +214,7 @@ small_flush_interval=60000
 external_sort_threshold=50
 
 # cache size for MManager.
-# This cache is used to improve write speed where all path check and TSDataType will be cached in MManager with corresponding Path.
+# This cache is used to improve insert speed where all path check and TSDataType will be cached in MManager with corresponding Path.
 schema_manager_cache_size=300000
 
 # If the size in byte of a WAL log exceeds this, it won't be written.
@@ -239,7 +239,7 @@ IP_white_list=0.0.0.0/0
 
 # The processing strategy chosen by the sync server when merging the sync data.
 # 1. If the sync data accounts for more than 50% of the update of the historical data (compared with the latest timestamp of the local storage group data),then it is recommended to select strategy 1.
-#    Setting the parameter to true, which has a greater impact on the write performance of the IoTDB system and occupies less CPU of the machine.
+#    Setting the parameter to true, which has a greater impact on the insert performance of the IoTDB system and occupies less CPU of the machine.
 # 2. If the sync data accounts for less than 50% of the update of the historical data (compared with the latest timestamp of the local storage group data),then it is recommended to select strategy 2.
-#    Setting the parameter to false, which has little impact on the write performance of IoTDB system and takes up a large amount of CPU power.
+#    Setting the parameter to false, which has little impact on the insert performance of IoTDB system and takes up a large amount of CPU power.
 update_historical_data_possibility=false
