--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -61,8 +61,8 @@ force_wal_period_in_ms=10
 # If its prefix is "/", then the path is absolute. Otherwise, it is relative.
 # data_dir=/path/iotdb/data/data
 
-# tsfile dir
-# For this property, multiple directories should be set, and all directories should be separated by ",". All TsFiles will be allocated separately in all these directories. Moreover, setting absolute directories is suggested.
+# sequence tsfile dir
+# For this property, multiple directories can be set, and all directories should be separated by ",". All TsFiles will be allocated separately in all these directories. Moreover, setting absolute directories is suggested.
 # If this property is unset, system will save the TsFiles in the default relative path directory under the data_dir folder(i.e., %IOTDB_HOME%/data/data/settled).
 # If some are absolute, system will save the data in exact location they point to.
 # If some are relative, system will save the data in the relative path directory they indicate under the data_dir folder.
@@ -73,6 +73,19 @@ force_wal_period_in_ms=10
 # For Linux platform
 # If its prefix is "/", then the path is absolute. Otherwise, it is relative.
 # tsfile_dir=/path/iotdb/data/data,data/data
+
+# unSequence tsfile dir
+# For this property, multiple directories can be set, and all directories should be separated by ",". All Overflow Files will be allocated separately in all these directories. Moreover, setting absolute directories is suggested.
+# If this property is unset, system will save the Overflow Files in the default relative path directory under the data_dir folder(i.e., %IOTDB_HOME%/data/data/overflow).
+# If some are absolute, system will save the data in exact location they point to.
+# If some are relative, system will save the data in the relative path directory they indicate under the data_dir folder.
+# Note: If some are assigned an empty string(i.e.,zero-length), they will be handled as a relative path.
+# For windows platform
+# If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the path is absolute. Otherwise, it is relative.
+# overflow_dir=D:\\iotdb\\data\\unseq,overflow2
+# For Linux platform
+# If its prefix is "/", then the path is absolute. Otherwise, it is relative.
+# overflow_dir=/path/iotdb/data/unseq1,overflow2
 
 # mult_dir_strategy
 # The strategy is used to choose a directory from tsfile_dir for the system to store a new tsfile.
