add memtable_number config

--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -155,6 +155,9 @@ period_time_for_merge_in_second=7200
 # Default is true.
 enable_timing_close_and_merge=true
 
+# total number of memtables in memtable pool
+memtable_number=23
+
 # time zone of server side
 # default value is +08:00
 # eg. +08:00, -01:00
