--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -155,6 +155,9 @@ period_time_for_merge_in_second=7200
 # Default is true.
 enable_timing_close_and_merge=true
 
+# Size of log buffer in each log node(in byte).
+wal_buffer_size=16777216
+
 # total number of memtables in memtable pool
 memtable_number=23
 
