--- a/iotdb/iotdb/conf/tsfile-format.properties
+++ b/iotdb/iotdb/conf/tsfile-format.properties
@@ -18,23 +18,23 @@
 #
 
 group_size_in_byte=134217728
-# The memory getTotalDataNumber for each series writer to pack page, default value is 64KB
+# The memory size for each series writer to pack page, default value is 64KB
 page_size_in_byte=65536
 # The maximum number of data points in a page, defalut 1024*1024
 max_number_of_points_in_page=1048576
 # Data type configuration
 # Data type for input timestamp, TsFile supports INT32 or INT64
 time_series_data_type=INT64
-# Max getTotalDataNumber limitation of input string
+# Max size limitation of input string
 max_string_length=128
 # Floating-point precision
 float_precision=2
 # Encoder configuration
-# Encoder of time series, TsFile supports TS_2DIFF, PLAIN and RLE(run-getTotalDataNumber encoding) and default value is TS_2DIFF
+# Encoder of time series, TsFile supports TS_2DIFF, PLAIN and RLE(run-length encoding) and default value is TS_2DIFF
 time_series_encoder=TS_2DIFF
 # Encoder of value series. default value is PLAIN.
-# For int, long data type, TsFile also supports TS_2DIFF and RLE(run-getTotalDataNumber encoding).
-# For float, double data type, TsFile also supports TS_2DIFF, RLE(run-getTotalDataNumber encoding) and GORILLA.
+# For int, long data type, TsFile also supports TS_2DIFF and RLE(run-length encoding).
+# For float, double data type, TsFile also supports TS_2DIFF, RLE(run-length encoding) and GORILLA.
 # For text data type, TsFile only supports PLAIN.
 value_encoder=PLAIN
 # Compression configuration
