--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -197,6 +197,11 @@ overflow_file_size_threshold=209715200
 # How many thread can concurrently flush. When <= 0, use CPU core number.
 concurrent_flush_thread=0
 
+# whether take over the memory management by IoTDB rather than JVM when serializing memtable as bytes in memory
+# (i.e., whether use ChunkBufferPool), value true, false
+chunk_buffer_pool_enable = false
+
+
 ####################
 ### Statistics Monitor configuration
 ####################
