--- a/iotdb/iotdb/conf/tsfile-format.properties
+++ b/iotdb/iotdb/conf/tsfile-format.properties
@@ -20,7 +20,7 @@
 group_size_in_byte=134217728
 # The memory size for each series writer to pack page, default value is 64KB
 page_size_in_byte=65536
-# The maximum number of data points in a page, defalut 1024*1024
+# The maximum number of data points in a page, default 1024*1024
 max_number_of_points_in_page=1048576
 # Data type configuration
 # Data type for input timestamp, TsFile supports INT32 or INT64
