rename groupSizeInByte to MemTableSizeInByte and fix a bug of count Chunk Value num in tsfile recovery

--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -111,6 +111,7 @@ merge_concurrent_threads=0
 fetch_size=10000
 
 # Size of log buffer in each log node(in byte).
+# If WAL is enabled and the size of a insert plan is smaller than this parameter, then the insert plan will be rejected by WAL
 wal_buffer_size=16777216
 
 # total number of memtables in memtable pool
