adjust tsfile threshold to close and update doc

--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -106,7 +106,7 @@ force_wal_period_in_ms=10
 # When the value<=0 or > CPU core number, use the CPU core number.
 merge_concurrent_threads=0
 
-# The amount of data that is read every time when IoTDB merge data.
+# The amount of data read each time in batch (the number of data strips, that is, the number of different timestamps.)
 fetch_size=10000
 
 # Size of log buffer in each log node(in byte).
@@ -121,10 +121,10 @@ memtable_number=20
 # eg. +08:00, -01:00
 time_zone=+08:00
 
-# When a TsFile's file size (in byte) exceeds this, the TsFile is forced closed.
-tsfile_size_threshold=2147483648
+# When a TsFile's file size (in byte) exceeds this, the TsFile is forced closed. The default threshold is 512 MB.
+tsfile_size_threshold=536870912
 
-# How many thread can concurrently flush. When <= 0, use CPU core number.
+# How many threads can concurrently flush. When <= 0, use CPU core number.
 concurrent_flush_thread=0
 
 # whether take over the memory management by IoTDB rather than JVM when serializing memtable as bytes in memory
