add parameters in iotdb-engine.properties

--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -26,6 +26,18 @@ rpc_address=0.0.0.0
 rpc_port=6667
 
 ####################
+### Dynamic Parameter Adapter Configuration
+####################
+
+# Is dynamic parameter adapter enable. It's recommended for users to enable parameter adapter.
+# The adapter can dynamically adjust the following two parameters according to the memory load of the system:
+# 1. tsfile_size_threshold which is introduced below.
+# 2. group_size_in_byte which is introduced in tsfile-format.properties.
+# By dynamically adjusting these two parameters, the probability of system memory explosion is greatly reduced.
+# When this parameter is set true, it will refuse to create time series or add storage groups under high system load.
+enable_parameter_adapter=true
+
+####################
 ### Write Ahead Log Configuration
 ####################
 
@@ -100,7 +112,9 @@ force_wal_period_in_ms=10
 ### Memory Control Configuration
 ####################
 
-memory_allocation_ratio=6:2:2
+# Memory Allocation Ratio: Write, Read, and Free Memory.
+# The parameter form is a:b:c, where a, b and c are integers. for example: 1:1:1 , 6:3:1
+write_read_free_memory_proportion=6:3:1
 
 # The maximum concurrent thread number for merging
 # Increase this value, it will increase IO and CPU consumption
@@ -113,6 +127,7 @@ fetch_size=10000
 
 # Size of log buffer in each log node(in byte).
 # If WAL is enabled and the size of a insert plan is smaller than this parameter, then the insert plan will be rejected by WAL
+# If it sets a value smaller than 0, use the default value 16777216
 wal_buffer_size=16777216
 
 # time zone of server side
