--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -156,6 +156,11 @@ continue_merge_after_reboot=true
 # When less than or equal to 0, timed merge is disabled.
 merge_interval_sec=7200
 
+# When set to true, all merges becomes full merge (the whole SeqFiles are re-written despite how
+# much they are overflowed). This may increase merge overhead significantly, do not open until
+# you need full merge urgently.
+force_full_merge=false
+
 
 ####################
 ### Statistics Monitor configuration
