--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -146,20 +146,26 @@ merge_thread_num=1
 # merge_memory_budget=2147483648
 
 # When set to true, if some crashed merges are detected during system rebooting, such merges will
-# be continued, otherwise, the unfinished part of such merges will not be restarted while the
-# finished part still remains as it is.
+# be continued, otherwise, the unfinished parts of such merges will not be continued while the
+# finished parts still remains as they are.
 # If you are feeling the rebooting is too slow, set this to false, true by default
 continue_merge_after_reboot=true
 
 # A global merge will be performed each such interval, that is, each storage group will be merged
-# (if proper merge candidates can be found). Unit: second, default: 2hours.
+# (if proper merge candidates can be found). Unit: second, default: 1hours.
 # When less than or equal to 0, timed merge is disabled.
-merge_interval_sec=7200
+merge_interval_sec=3600
 
 # When set to true, all merges becomes full merge (the whole SeqFiles are re-written despite how
-# much they are overflowed). This may increase merge overhead significantly, do not open until
-# you need full merge urgently.
+# much they are overflowed). This may increase merge overhead depending on how much the SeqFiles
+# are overflowed.
 force_full_merge=false
+
+# During a merge, if a chunk with less number of chunks than this parameter, the chunk will be
+# merged with its succeeding chunks even if it is not overflowed, until the merged chunks reach
+# this threshold and the new chunk will be flushed.
+# When less than 0, this mechanism is disabled.
+chunk_merge_point_threshold=4096
 
 
 ####################
